Страница товара каталога

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -34,7 +34,7 @@
 	<div class="naw-wrap">
 		<div class="naw-logo">
 			<!-- <a href="#"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>  -->
-			<a href="#">
+			<a href="index.html">
 					<svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 160.5 84.6" enable-background="new 0 0 160.5 84.6" xml:space="preserve">
 			 <g>
@@ -355,9 +355,9 @@
 		</div>
 		<div class="naw-btn naw-btn-close" id="naw-btn"></div>
 		<ul class="nav-list">
-			<li class="nav-item"><a href="#">Продукция</a></li>
-			<li class="nav-item"><a href="#">О MORSO</a></li>
-			<li class="nav-item"><a href="#">Вдохновение</a></li>
+				<li class="nav-item"><a href="catalog.html">Продукция</a></li>
+				<li class="nav-item"><a href="list.html">О MORSO</a></li>
+				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
 			<li class="nav-item"><a href="#">Где купить</a></li>
 		</ul>
 		<div class="nav-search">
