--- a/app/goods.html
+++ b/app/goods.html
@@ -31,13 +31,13 @@
 	<header class="head" style="background-image: url(../img/prodact.jpg)">
 		<div class="naw-wrap">
 			<div class="naw-logo">
-				<a href="#"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>
+				<a href="index.html"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>
 			</div>
 			<div class="naw-btn naw-btn-close" id="naw-btn"></div>
 			<ul class="nav-list">
-				<li class="nav-item"><a href="#">Продукция</a></li>
-				<li class="nav-item"><a href="#">О MORSO</a></li>
-				<li class="nav-item"><a href="#">Вдохновение</a></li>
+				<li class="nav-item"><a href="catalog.html">Продукция</a></li>
+				<li class="nav-item"><a href="list.html">О MORSO</a></li>
+				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
 				<li class="nav-item"><a href="#">Где купить</a></li>
 			</ul>
 			<div class="nav-search">
@@ -117,17 +117,25 @@
 				</div>
 
 			</div>
-			<div class="goods_discrip-params"></div>
+			<div class="goods_discrip-params">
+					<H3 class="goods_params-title">Технические характеристики</H3>
+					<ul class="goods_params-list">
+						<li class="goods_params-item"><span class="goods_params-name">Маркировка энергоэффективности</span><span class="goods_params-value"></span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Номинальная мощность (кВт)</span><span class="goods_params-value">8,2 КВт</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Диапазон мощности</span><span class="goods_params-value">6-10 кВт</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Обогреваемя площадь</span><span class="goods_params-value">90 - 150 м&sup2;</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Высота (мм)</span><span class="goods_params-value">1090</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Ширина (мм)</span><span class="goods_params-value">328</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Длина (мм)</span><span class="goods_params-value">718</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Диаметр дымохода</span><span class="goods_params-value">Ø 120</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Вес (кг)</span><span class="goods_params-value">125</span></li>
+							<li class="goods_params-item"><span class="goods_params-name">Длина топки (см)</span><span class="goods_params-value">45</span></li>	
+					</ul>
+			</div>
+			
+			<div class="goods_discrip-call"></div>
 	</section>
 </div>	
-
-
-
-
-
-
-
-
 
 
 
