--- a/app/list.html
+++ b/app/list.html
@@ -31,13 +31,13 @@
 	<header class="head" style="background-image: url(../img/morso-bg2.jpg)">
 		<div class="naw-wrap">
 			<div class="naw-logo">
-				<a href="#"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>
+				<a href="index.html"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>
 			</div>
 			<div class="naw-btn naw-btn-close" id="naw-btn"></div>
 			<ul class="nav-list">
-				<li class="nav-item"><a href="#">Продукция</a></li>
-				<li class="nav-item"><a href="#">О MORSO</a></li>
-				<li class="nav-item"><a href="#">Вдохновение</a></li>
+				<li class="nav-item"><a href="catalog.html">Продукция</a></li>
+				<li class="nav-item"><a href="list.html">О MORSO</a></li>
+				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
 				<li class="nav-item"><a href="#">Где купить</a></li>
 			</ul>
 			<div class="nav-search">
