--- a/app/goods.html
+++ b/app/goods.html
@@ -159,8 +159,22 @@
 						</h3>
 				</div>
 
+			</div>
 
-
+			<div class="goods_desc">
+				<p>Эта чрезвычайно популярная чугунная дровяная печь может с длинной топкой вмещать бревен длиной до 45 см. 
+						Это лучистая печь и оборудована ребристой решеткой, пепельницей и пепельницей. 2B classic можно обжигать с помощью дерева.</p>
+				<p>Как и большинство других плиток Morsø, 2B Classic отвечает самым строгим экологическим требованиям в мире.</p>				
+				<p>Характерной особенностью 2B Classic от Morsø с сияющим теплом остается очень популярная серия. Длинная топка достаточно большая, 
+					чтобы брать бревен длиной 45 см. Он может нагреваться до 150 кв.</p>
+				<h3>Технические особенности</h3>
+				<ul>
+					<li>Предварительное нагревание подачи вторичного воздуха</li>
+					<li>Пепел может</li>
+					<li>Система воздушной мойки</li>
+					<li>Третичный воздух</li>
+					<li>Решетчатая колосниковая система</li>
+				</ul>
 			</div>
 	</section>
 </div>	
