--- a/app/where.html
+++ b/app/where.html
@@ -62,7 +62,7 @@
 		</form>
 	</div>
 	<div class="container">
-		<h1 class="title">Офоициальные дилеры MORSØ в Российской Федерации</h1>
+		<h1 class="title">Официальные дилеры MORSØ в Российской Федерации</h1>
 		<div class="breadcrumb">
 			<ul class="breadcrumb-list">
 				<li class="breadcrumb-item">
@@ -91,14 +91,43 @@
 
 	<div class="container">
 		<section class="partner-wrap">
-			<div class="partner-list-content">
+			
 
 				<div class="partner-list-map-wrap">
 						<div class="partner-list-map">
 								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AF3QZFUNVAMb1sUiU7-AGePSn4Jrc_Gnc&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 						</div>
-
 				</div>
+
+				<div class="partner-left-menu-wrap">
+						<div class="partner-left-menu-btn">
+								<div class="menu-icon-reg menu-icon-4">
+										<div class="bar bar-1"></div>
+										<div class="bar bar-2"></div>
+										<div class="bar bar-3"></div>
+									</div>						
+						</div>
+
+						<div class="partner-left-menu">
+							<h3>В регионах РФ:</h3>
+							<ul>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Москва и область</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Санкт-Петербург</a></li>
+								<li><a href="#" class="active"><i class="fa fa-angle-right"></i>Тульская область</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Ярославская облпсть</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Рязанская область</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Хабаровский край</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Приморский край</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Пензенская область</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Краснодарский край</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Брянская область</a></li>
+								<li><a href="#"><i class="fa fa-angle-right"></i>Кабардино-Балкария</a></li>
+							</ul>
+						</div>
+				</div>
+
+
+
 
 				<div class="partner-list-wrap">
 
@@ -229,24 +258,47 @@
 					</div>
 
 				</div>
-			</div>
 
-			<div class="partner-manu-wrap">
-				<h3>В регионах РФ:</h3>
-				<ul>
-					<li><a href="№">Москва и область</a></li>
-					<li><a href="№">Санкт-Петербург</a></li>
-					<li><a href="№">Тульская область</a></li>
-					<li><a href="№">Ярославская облпсть</a></li>
-					<li><a href="№">Рязанская область</a></li>
-					<li><a href="№">Хабаровский край</a></li>
-					<li><a href="№">Приморский край</a></li>
-					<li><a href="№">Пензенская область</a></li>
-					<li><a href="№">Краснодарский край</a></li>
-					<li><a href="№">Брянская область</a></li>
-					<li><a href="№">Кабардино-Балкария</a></li>
-				</ul>
-			</div>
+				<div class="partner-offer-wrap">
+					<div class="partner-offer-list">
+
+							<div class="partner-offer-item">
+								<div class="partner-offer-img">
+										<svg><use xlink:href="#briefcase"></use></svg>
+								</div>
+								<h3>Условия сотрудничества</h3>
+								<p>Хотите стать дилером Morso? Узнайте об условиях сотрудничества у официального представителя Morso в России.</p>
+								<a href="#" class="partner-offer-btn">Узнать условия</a>
+							</div>
+
+							<div class="partner-offer-item">
+									<div class="partner-offer-img">
+											<svg><use xlink:href="#expert"></use></svg>
+									</div>
+									<h3>Спросить специалиста</h3>
+									<p>Хотите получить дополнительную информацию, о продукции Morso? Задайте интересующие Вас вопросы специалисту .</p>
+									<a href="#" class="partner-offer-btn">Задать вопрос</a>
+							</div>
+
+
+
+
+
+
+					</div>
+
+
+
+
+				</div>
+
+
+
+
+
+
+
+
 
 
 
