Страница партнеры, тел. в header

--- a/app/list.html
+++ b/app/list.html
@@ -31,16 +31,29 @@
 	<header class="head" style="background-image: url(../img/morso-bg2.jpg)">
 		<div class="naw-wrap">
 			<div class="naw-logo">
-				<a href="index.html"><img src="img/icon/logo.svg" class="naw-logo-img" alt="Логотип MORSO"></a>
+				<a href="index.html">
+					<svg width="130" height="75">
+						<use xlink:href="#logo"></use>
+					</svg>
+				</a>
 			</div>
-			<div class="naw-btn naw-btn-close" id="naw-btn"></div>
+			<div class="nav-mob-phone"><i class="fa fa-phone"></i>8-800-777-35-87</div>
+			<div class="naw-btn">
+				<div class="menu-icon menu-icon-3">
+					<div class="bar bar-1"></div>
+					<div class="bar bar-2"></div>
+					<div class="bar bar-3"></div>
+				</div>
+			</div>
 			<ul class="nav-list">
 				<li class="nav-item"><a href="catalog.html">Продукция</a></li>
 				<li class="nav-item"><a href="list.html">О MORSO</a></li>
 				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
 				<li class="nav-item"><a href="where.html">Где купить</a></li>
 			</ul>
+			
 			<div class="nav-search">
+				<div class="nav-search-phone">8-800-777-35-87</div>
 				<i class="fa fa-search" aria-hidden="true"></i><span class="nav-search-txt">Search</span>
 			</div>
 		</div>
@@ -52,7 +65,7 @@
 		</form>
 	</div>
 	<div class="container">
-		<h1 class="title">Чугунные печи камины MORSO</h1>
+		<h1 class="title">Официальные дилеры MORSØ в Российской Федерации</h1>
 		<div class="breadcrumb">
 			<ul class="breadcrumb-list">
 				<li class="breadcrumb-item">
@@ -62,22 +75,21 @@
 				</li>
 				<li class="breadcrumb-item">
 					<a href="#">
-						<span>Каталог</span><i class="fa fa-caret-right"></i>
+						<span>О компании</span><i class="fa fa-caret-right"></i>
 					</a>
 				</li>
 				<li class="breadcrumb-item">
 					<a href="#">
-						<span>Внутренние</span><i class="fa fa-caret-right"></i>
+						<span>Где купить</span><i class="fa fa-caret-right"></i>
 					</a>
 				</li>
 				<li class="breadcrumb-item">
-					<span>Дровяные печи Morso</span>
+					<span>Диллеры MORSØ в России</span>
 				</li>
 			</ul>
 		</div>
-
 	</div>
-	
+
 	<div class="list_wrap">
 		<div class="catalog-section-item">
 			<div class="catalog-section-img">
