--- a/app/whereitem.html
+++ b/app/whereitem.html
@@ -93,7 +93,7 @@
 
 
 	<div class="container">
-		<section class="partner-wrap">
+		<div class="partner-wrap">
 			
 
 				<div class="partner-list-map-wrap">
@@ -132,135 +132,27 @@
 
 
 
-				<div class="partner-list-wrap">
+				<section class="partner-one-wrap">
 
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="whereitem.html">Печной Центр Ясенево</a></h3>
+					<div class="partner-one-item">
+						<div class="partner-one-txt">
+							<h2>Печной Центр Ясенево</h2>
 							<p>Адрес: <span> 117574 г. Москва, дорога МКАД 38 км, владение 4Б, стр.1, </p>
 							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
 							<p>Тел: <span> +7 (495) 423-62-34; +7 (985) 308-83-16. </p>
 							<p>E-mail: <a href="mailto:info@pechi-tula.ru">info@pechnik.su</a></p>
 							<p>Сайт: <a href="https://pechi-tula.ru">pechnik.su</a></p>
+							<h3 class="partner-one-extra-title">Дополнительная информация:</h3>
+							<p class="partner-one-extra-txt">Ассортимент печного центра включает в себя весь спектр продукции печной индустрии: 
+								печной кирпич, печные смеси, каминное и печное литье, изоляцию для печей и каминов, дымоходы, печи для дома и для бани, 
+								камины, облицовки для каминов, аксессуары и многое другое.</p>
 						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
+						<a href="where.html" class="partner-one-btn">Скисок дилеров</a>
 					</div>
 
 
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">Печной Центр Дмитровский</a></h3>
-							<p>Адрес: <span> Московсквая обл., Дмитровское ш, д. Грибки </p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
-							<p>Тел: <span> +7 (495) 423-62-34; +7 (985) 308-83-16. </p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru">info@pechnik.su</a></p>
-							<p>Сайт: <a href="https://pechi-tula.ru">pechnik.su</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">Тульский Печной Центр</a></h3>
-							<p>Адрес: <span> г.Тула, ул. Мосина, 2, ТЦ "СтройДвор" на Фрунзе</p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
-							<p>Тел: <span> +7 (905) 114-29-92, +7 (915) 680-61-21 </p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@pechi-tula.ru</a></p>
-							<p>Сайт: <a href="https://pechi-tula.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ИП "БАЗАН И.Л."</a></h3>
-							<p>Адрес: <span> Московская область, Красногорский р-н, д. Позднякова ул. Лесная, 14, 10км от МКАД, ТК "Балтия"</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span>+7(926) 482-94-26 </span></p>
-							<p>Сайт: <a href="https://pechi-baltiy.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Рога и копыта"</a></h3>
-							<p>Адрес: <span> г.Санкт-Петербург, Невский проспект, д. 2</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Купи и забудь"</a></h3>
-							<p>Адрес: <span> г.Санкт-Петербург, Лиговский проспект, д. 7</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (911) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Северные печи"</a></h3>
-							<p>Адрес: <span> Ханты-мансийский ОА, г.Ханты-Мансийск, ул. Деникина, д. 17</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (917) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">"Печи на дровах"</a></h3>
-							<p>Адрес: <span> Хабаровский край, Хабаровский район, пос. Матвеевка, в/ч 20662</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">"Емеля на печи"</a></h3>
-							<p>Адрес: <span> Тверская область, г.Торжок, ул. Б. Махно, д. 14, оф. 17</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (916) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#"> ООО "Мартеновские печи"</a></h3>
-							<p>Адрес: <span> Пермский край, г. Пермь, ул. Врагов Народа, д. 244</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p></p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-				</div>
+				
+				</section>
 
 				<div class="partner-offer-wrap">
 					<div class="partner-offer-list">
@@ -306,7 +198,7 @@
 
 
 
-		</section>
+		</div>
 	</div>
 
 
