--- a/app/article-list.html
+++ b/app/article-list.html
@@ -65,7 +65,7 @@
 		</form>
 	</div>
 	<div class="container">
-		<h1 class="title">Официальные дилеры MORSØ в Российской Федерации</h1>
+		<h1 class="title">ABOUT MORSØ</h1>
 		<div class="breadcrumb">
 			<ul class="breadcrumb-list">
 				<li class="breadcrumb-item">
@@ -84,7 +84,7 @@
 					</a>
 				</li>
 				<li class="breadcrumb-item">
-					<span>Диллеры MORSØ в России</span>
+					<span>О MORSØ</span>
 				</li>
 			</ul>
 		</div>
@@ -93,235 +93,55 @@
 
 
 	<div class="container">
-		<section class="partner-wrap">
+		<div class="article-wrap">
+
+			<div class="article-list-item">
+					<a href="#" class="article-list-img">
+						<img src="img/article/article_1.jpg" alt="article">						
+					</a>
+					<h3 class="article-list-title"><a href="#">История Morsoe</a></h3>
+					<p>black for over 160 years- When you close your eyes today and think of Morsø, you probably see the image of a... </p>
+			</div>
 			
+			<div class="article-list-item">
+					<a href="#" class="article-list-img">
+						<img src="img/article/article_2.jpg" alt="article">						
+					</a>
+					<h3 class="article-list-title"><a href="#">Дизайн Morsoe</a></h3>
+					<p>Danish design has been delighting the world for many years now. With a look and feel that is distinctive to Denmark, 
+						the... </p>
+			</div>
 
-				<div class="partner-list-map-wrap">
-						<div class="partner-list-map">
-								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AF3QZFUNVAMb1sUiU7-AGePSn4Jrc_Gnc&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-						</div>
-				</div>
+			<div class="article-list-item">
+					<a href="#" class="article-list-img">
+						<img src="img/article/article_3.jpg" alt="article">						
+					</a>
+					<h3 class="article-list-title"><a href="#Чугнн Morsoe">Чугун</a></h3>
+					<p>Оригинальная чугунная печь. Квинтэссенция дровяной печи всегда была изготовлена ​​из чугуна, и сегодня она по-... </p>
+			</div>
 
-				<div class="partner-left-menu-wrap">
-						<div class="partner-left-menu-btn">
-								<div class="menu-icon-reg menu-icon-4">
-										<div class="bar bar-1"></div>
-										<div class="bar bar-2"></div>
-										<div class="bar bar-3"></div>
-									</div>						
-						</div>
+			<div class="article-list-item">
+					<a href="#" class="article-list-img">
+						<img src="img/article/article_4.jpg" alt="article">						
+					</a>
+					<h3 class="article-list-title"><a href="#">Снятые с производства печи </a></h3>
+					<p>	Ниже приведены некоторые из старых прекращенных дровяных печей Морсё. Возможно, вы счастливый обладатель одного из них...</p>
+			</div>
 
-						<div class="partner-left-menu">
-							<h3>В регионах РФ:</h3>
-							<ul>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Москва и область</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Санкт-Петербург</a></li>
-								<li><a href="#" class="active"><i class="fa fa-angle-right"></i>Тульская область</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Ярославская облпсть</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Рязанская область</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Хабаровский край</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Приморский край</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Пензенская область</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Краснодарский край</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Брянская область</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i>Кабардино-Балкария</a></li>
-							</ul>
-						</div>
-				</div>
-
-
-
-
-				<div class="partner-list-wrap">
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="whereitem.html">Печной Центр Ясенево</a></h3>
-							<p>Адрес: <span> 117574 г. Москва, дорога МКАД 38 км, владение 4Б, стр.1, </p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
-							<p>Тел: <span> +7 (495) 423-62-34; +7 (985) 308-83-16. </p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru">info@pechnik.su</a></p>
-							<p>Сайт: <a href="https://pechi-tula.ru">pechnik.su</a></p>
-						</div>
-						<a href="whereitem.html" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">Печной Центр Дмитровский</a></h3>
-							<p>Адрес: <span> Московсквая обл., Дмитровское ш, д. Грибки </p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
-							<p>Тел: <span> +7 (495) 423-62-34; +7 (985) 308-83-16. </p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru">info@pechnik.su</a></p>
-							<p>Сайт: <a href="https://pechi-tula.ru">pechnik.su</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">Тульский Печной Центр</a></h3>
-							<p>Адрес: <span> г.Тула, ул. Мосина, 2, ТЦ "СтройДвор" на Фрунзе</p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</p>
-							<p>Тел: <span> +7 (905) 114-29-92, +7 (915) 680-61-21 </p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@pechi-tula.ru</a></p>
-							<p>Сайт: <a href="https://pechi-tula.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ИП "БАЗАН И.Л."</a></h3>
-							<p>Адрес: <span> Московская область, Красногорский р-н, д. Позднякова ул. Лесная, 14, 10км от МКАД, ТК "Балтия"</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span>+7(926) 482-94-26 </span></p>
-							<p>Сайт: <a href="https://pechi-baltiy.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Рога и копыта"</a></h3>
-							<p>Адрес: <span> г.Санкт-Петербург, Невский проспект, д. 2</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Купи и забудь"</a></h3>
-							<p>Адрес: <span> г.Санкт-Петербург, Лиговский проспект, д. 7</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (911) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">ООО "Северные печи"</a></h3>
-							<p>Адрес: <span> Ханты-мансийский ОА, г.Ханты-Мансийск, ул. Деникина, д. 17</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (917) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">"Печи на дровах"</a></h3>
-							<p>Адрес: <span> Хабаровский край, Хабаровский район, пос. Матвеевка, в/ч 20662</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#">"Емеля на печи"</a></h3>
-							<p>Адрес: <span> Тверская область, г.Торжок, ул. Б. Махно, д. 14, оф. 17</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (916) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-
-					<div class="partner-list-item">
-						<div class="partner-list-txt">
-							<h3><a href="#"> ООО "Мартеновские печи"</a></h3>
-							<p>Адрес: <span> Пермский край, г. Пермь, ул. Врагов Народа, д. 244</span></p>
-							<p>Время работы: <span> ежедневно с 09:00 - 18:00.</span></p>
-							<p>Тел: <span> +8 (800) 555-29-77, +7 (915) 678-61-31</span></p>
-							<p>E-mail: <a href="mailto:info@pechi-tula.ru"> info@piter-pechi.ru</a></p>
-							<p></p>Сайт: <a href="https://piter-pechi.ru">Pechi-Tula.Ru</a></p>
-						</div>
-						<a href="#" class="partner-list-btn">Смотреть дилера</a>
-					</div>
-
-				</div>
-
-				<div class="partner-offer-wrap">
-					<div class="partner-offer-list">
-
-							<div class="partner-offer-item">
-								<div class="partner-offer-img">
-										<svg><use xlink:href="#briefcase"></use></svg>
-								</div>
-								<h3>Условия сотрудничества</h3>
-								<p>Хотите стать дилером Morso? Узнайте об условиях сотрудничества у официального представителя Morso в России.</p>
-								<a href="#" class="partner-offer-btn">Узнать условия</a>
-							</div>
-
-							<div class="partner-offer-item">
-									<div class="partner-offer-img">
-											<svg><use xlink:href="#expert"></use></svg>
-									</div>
-									<h3>Спросить специалиста</h3>
-									<p>Хотите получить дополнительную информацию, о продукции Morso? Задайте интересующие Вас вопросы специалисту .</p>
-									<a href="#" class="partner-offer-btn">Задать вопрос</a>
-							</div>
-
-
-
-
-
-
-					</div>
-
-
-
-
-				</div>
-
-
-
-
-
-
-
-
-
-
-
-
-		</section>
+			<div class="article-list-item">
+					<a href="#" class="article-list-img">
+						<img src="img/article/article_5.jpg" alt="article">						
+					</a>
+					<h3 class="article-list-title"><a href="#">Окружающая среда</a></h3>
+					<p>Morsø - Печи для горения древесины Качество воздуха важно для нас здесь, в Morsø, и мы стремимся предоставить</p>
+			</div>
+		</div>
 	</div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
+	
 
 
 
