Провки перед посадкой на CMS

--- a/app/goods.html
+++ b/app/goods.html
@@ -215,6 +215,38 @@
 	</section>
 </div>
 
+<!-- SVG спрайт иконки энергоэффективности-->
+<svg style="display: none">
+  <symbol viewBox="0 0 124 50" id="energo-aplas">
+    <path fill="#52AC62" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
+    <g >
+      <g>
+        <path fill="#FFFFFF" d="M109,87.6h-6.6l-2.6-6.8h-12l-2.5,6.8h-6.4l11.7-30.1h6.4L109,87.6z M97.8,75.7l-4.1-11.2l-4.1,11.2H97.8z
+			"/>
+      </g>
+      <g>
+        <path fill="#FFFFFF" d="M113.5,67.8V64h-3.8v-2.6h3.8v-3.8h2.6v3.8h3.9V64h-3.9v3.8H113.5z"/>
+      </g>
+    </g>
+  </symbol>
+  <symbol viewBox="0 0 124 50" id="energo-a">
+    <g>
+      <path fill="#B1CE55" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
+      <path fill="#FFFFFF" d="M109,87.6h-6.6l-2.6-6.8h-12l-2.5,6.8h-6.4l11.7-30.1h6.4L109,87.6z M97.8,75.7l-4.1-11.2l-4.1,11.2H97.8z"
+		/>
+    </g>
+  </symbol>
+  <symbol viewBox="0 0 124 50" id="energo-с">
+    <g>
+      <path fill="#EEB744" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
+      <path fill="#FFFFFF" d="M101.1,76.6l5.9,1.9c-0.9,3.3-2.4,5.7-4.5,7.3s-4.8,2.4-8,2.4c-4,0-7.3-1.4-9.8-4.1s-3.9-6.5-3.9-11.2
+		c0-5,1.3-8.9,3.9-11.7s6-4.2,10.2-4.2c3.7,0,6.7,1.1,9,3.3c1.4,1.3,2.4,3.1,3.1,5.5l-6,1.4c-0.4-1.6-1.1-2.8-2.2-3.7
+		c-1.1-0.9-2.5-1.4-4.1-1.4c-2.2,0-4,0.8-5.4,2.4c-1.4,1.6-2.1,4.2-2.1,7.8c0,3.8,0.7,6.5,2.1,8.1s3.1,2.4,5.3,2.4
+		c1.6,0,3-0.5,4.2-1.5S100.6,78.8,101.1,76.6z"/>
+    </g>
+  </symbol>
+</svg>
+
 
 <div class="goods_access">
 	<div class="list_wrap">
