--- a/app/goods.html
+++ b/app/goods.html
@@ -130,7 +130,9 @@
 			<div class="goods_discrip-params">
 					<H3 class="goods_params-title">Технические характеристики</H3>
 					<ul class="goods_params-list">
-						<li class="goods_params-item"><span class="goods_params-name">Маркировка энергоэффективности</span><span class="goods_params-value"></span></li>
+						<li class="goods_params-item"><span class="goods_params-name">Маркировка энергоэффективности</span>
+							<span class="goods_params-value"><svg><use  xlink:href="#energo-aplas"></use></svg></span>
+					</li>
 							<li class="goods_params-item"><span class="goods_params-name">Номинальная мощность (кВт)</span><span class="goods_params-value">8,2 КВт</span></li>
 							<li class="goods_params-item"><span class="goods_params-name">Диапазон мощности</span><span class="goods_params-value">6-10 кВт</span></li>
 							<li class="goods_params-item"><span class="goods_params-name">Обогреваемя площадь</span><span class="goods_params-value">90 - 150 м&sup2;</span></li>
@@ -217,35 +219,23 @@
 
 <!-- SVG спрайт иконки энергоэффективности-->
 <svg style="display: none">
-  <symbol viewBox="0 0 124 50" id="energo-aplas">
-    <path fill="#52AC62" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
-    <g >
-      <g>
-        <path fill="#FFFFFF" d="M109,87.6h-6.6l-2.6-6.8h-12l-2.5,6.8h-6.4l11.7-30.1h6.4L109,87.6z M97.8,75.7l-4.1-11.2l-4.1,11.2H97.8z
-			"/>
-      </g>
-      <g>
-        <path fill="#FFFFFF" d="M113.5,67.8V64h-3.8v-2.6h3.8v-3.8h2.6v3.8h3.9V64h-3.9v3.8H113.5z"/>
-      </g>
-    </g>
-  </symbol>
-  <symbol viewBox="0 0 124 50" id="energo-a">
-    <g>
-      <path fill="#B1CE55" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
-      <path fill="#FFFFFF" d="M109,87.6h-6.6l-2.6-6.8h-12l-2.5,6.8h-6.4l11.7-30.1h6.4L109,87.6z M97.8,75.7l-4.1-11.2l-4.1,11.2H97.8z"
-		/>
-    </g>
-  </symbol>
-  <symbol viewBox="0 0 124 50" id="energo-с">
-    <g>
-      <path fill="#EEB744" d="M9.2,73.5L34.6,48h100.6v51H34.6L9.2,73.5z"/>
-      <path fill="#FFFFFF" d="M101.1,76.6l5.9,1.9c-0.9,3.3-2.4,5.7-4.5,7.3s-4.8,2.4-8,2.4c-4,0-7.3-1.4-9.8-4.1s-3.9-6.5-3.9-11.2
-		c0-5,1.3-8.9,3.9-11.7s6-4.2,10.2-4.2c3.7,0,6.7,1.1,9,3.3c1.4,1.3,2.4,3.1,3.1,5.5l-6,1.4c-0.4-1.6-1.1-2.8-2.2-3.7
-		c-1.1-0.9-2.5-1.4-4.1-1.4c-2.2,0-4,0.8-5.4,2.4c-1.4,1.6-2.1,4.2-2.1,7.8c0,3.8,0.7,6.5,2.1,8.1s3.1,2.4,5.3,2.4
-		c1.6,0,3-0.5,4.2-1.5S100.6,78.8,101.1,76.6z"/>
-    </g>
-  </symbol>
-</svg>
+		<symbol viewBox="0 0 49.3 20" id="energo-aplas">
+				<path fill="#55A462" d="M0 10L10 0h39.3v20H9.9L0 10z"></path>
+				<path fill="#FFF" d="M40.9 7.9V6.3h-1.6v-.7h1.6V3.9h.8v1.6h1.6v.7h-1.6v1.6h-.8zM34.7 3.6l4.7 12.2h-2.3L36 12.6h-4.8L30 15.8h-2.2l4.7-12.2h2.2zm.7 7.4l-1.8-5.1-1.9 5.1h3.7z"></path>
+		</symbol>
+		<symbol viewBox="0 0 49.3 20" id="energo-a">  
+				<path fill="#B1CE55" d="M0.1,10.1l10-10h39.3v20l-39.4,0L0.1,10.1z"/>
+				<path fill="#FFFFFF" d="M34.7,3.6l4.7,12.2h-2.3L36,12.6h-4.8L30,15.8h-2.2l4.7-12.2H34.7z M35.4,11l-1.8-5.1L31.7,11H35.4z"/>
+		</symbol>
+		<symbol viewBox="0 0 49.3 20" id="energo-c">
+				<path fill="#EEB744" d="M0,10.1L10,0h39.3v20.1l-39.4,0L0,10.1z"/>
+				<path fill="#FFFFFF" d="M32.1,15.9c0,0-0.3-0.2-1-0.5c-0.6-0.4-1.1-0.9-1.5-1.6c-0.3-0.7-0.5-1.5-0.5-2.4V8.1c0-0.9,0.2-1.7,0.5-2.4
+					c0.3-0.7,0.8-1.2,1.5-1.6s1.4-0.6,2.3-0.6c0.7,0,1.4,0.2,2,0.5c0.6,0.3,1.1,0.8,1.5,1.3c0.4,0.6,0.7,1.3,0.8,2.1h-2.1
+					c-0.1-0.4-0.3-0.7-0.5-1c-0.2-0.3-0.5-0.5-0.8-0.7c-0.3-0.2-0.6-0.2-1-0.2c-0.5,0-0.9,0.1-1.2,0.3c-0.3,0.2-0.6,0.5-0.8,0.9
+					c-0.2,0.4-0.3,0.8-0.3,1.4v3.3c0,0.5,0.1,1,0.3,1.4s0.4,0.7,0.8,0.9c0.3,0.2,0.7,0.3,1.2,0.3c0.4,0,0.7-0.1,1-0.2s0.6-0.4,0.8-0.7
+					c0.2-0.3,0.4-0.6,0.5-1h2.1c-0.1,0.8-0.4,1.5-0.8,2.1s-0.9,1-1.5,1.3c-0.6,0.3-1.3,0.5-2,0.5C32.5,15.9,32.1,15.9,32.1,15.9z"/>	
+		</symbol>
+	</svg>
 
 
 <div class="goods_access">
