Посадка, правки - футер

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -51,7 +51,7 @@
 				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
 				<li class="nav-item"><a href="where.html">Где купить</a></li>
 			</ul>
-			
+
 			<div class="nav-search">
 				<div class="nav-search-phone">8-800-777-35-87</div>
 				<i class="fa fa-search" aria-hidden="true"></i><span class="nav-search-txt">Search</span>
@@ -97,14 +97,14 @@
 			<h3 class="mainproducts_title"><a href="#">MORSØ IGNIS - FEUERSTELLE</a></h3>
 			<a href="#" class="mainproducts_btn">Посмотреть</a>
 		</div>
-	</section>	
+	</section>
 </div>
 <section class="showcase_wrap">
 	<article class="showcase_item">
 		<div class="showcase_item-info">
 			<div class="showcase_item-info-wrap">
 				<h2 class="showcase_item-title"><a href="#">MORSØ FORNO GAS</a></h2>
-					<p class="showcase_item-txt">Новинка! Morsø Forno Gas – садовая печь – гриль, работает на газе. 
+					<p class="showcase_item-txt">Новинка! Morsø Forno Gas – садовая печь – гриль, работает на газе.
 						Morsø Forno Gas - это красивая и удобная в использовании печь-гриль, которая служит не только не только приготовления
 						блюд на гриле, но также обладает стильным дизайном, способствует созданию атмосферы уюта и комфорта.</p>
 					<a href="#" class="showcase_item-btn">Смотреть товар</a>
@@ -117,7 +117,7 @@
 			<div class="showcase_item-info">
 				<div class="showcase_item-info-wrap">
 					<h2 class="showcase_item-title"><a href="#">MORSØ 1126</a></h2>
-						<p class="showcase_item-txt">Чугунная печь-камин Morsø 1126 - это модель получила развитие популярной классической печи 1124, 
+						<p class="showcase_item-txt">Чугунная печь-камин Morsø 1126 - это модель получила развитие популярной классической печи 1124,
 						разработанной в Дании. Отопительная мощность печи в диапазоне от 4 до 8 кВт, расчитана на отопление загородного дома или дачи площадью до 80 м<sup>2</sup>.</p>
 						<a href="#" class="showcase_item-btn">Смотреть товар</a>
 				</div>
@@ -168,7 +168,7 @@
 			<svg><use  xlink:href="#expert"></use></svg>
 		</div>
 		<h3>Спросить специалиста</h3>
-		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso. 
+		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso.
 		Поэтому мы предлагаем задать интересующие Вас вопросы специалисту - бесплатно и без обязательств.</p>
 		<a href="#" class="maininfo-btn">Задать вопрос</a>
 	</div>
@@ -181,13 +181,13 @@
 			<p>Вы решили купить печь Morsø, нажмите ниже, чтобы найти ближайшего дилера, который поможет Вам сделать покупку.</p>
 			<a href="#" class="maininfo-btn">Найти дилера</a>
 	</div>
-	
+
 	<div class="maininfo-item">
 			<div class="maininfo-img">
 				<svg><use  xlink:href="#catalog"></use></svg>
 			</div>
 			<h3>Каталог</h3>
-			<p>Если вы заинтересованы в покупке печи Morsø и хотели бы ознакомится с характеристиками и 
+			<p>Если вы заинтересованы в покупке печи Morsø и хотели бы ознакомится с характеристиками и
 				посмотреть фото печей Morsø в интерьере, смотрите и выбирайте!</p>
 			<a href="#" class="maininfo-btn">Перейти в каталог</a>
 	</div>
@@ -226,11 +226,10 @@
 					<p class="foot_info-mail">E-mail: info@morso.ru</p>
 
 					<div class="foot_info-socbtn">
-						<a href="http://www.facebook.com/morsouk" target="_blank"><img src="../img/icon/facebook.png" alt="facebook"></a>
-						<a href="https://www.instagram.com/morsomoments/" target="_blank"><img src="../img/icon/instagram.png" alt="instagram"></a>
-						<a href="http://www.twitter.com/morsouk" target="_blank"><img src="../img/icon/twitter.png" alt="twitter"></a>
-						<a href="https://www.youtube.com/channel/UCV0KmQmmLlzfR0vBIhxdKrQ" target="_blank"><img src="../img/icon/youtube.png"
-							 alt="youtube"></a>
+<span class="hidden-link" data-link="http://www.facebook.com/morsouk" target="_blank"><img src="../img/icon/facebook.png" alt="facebook"></span>
+<span class="hidden-link" data-link="https://www.instagram.com/morsomoments/" target="_blank"><img src="../img/icon/instagram.png" alt="instagram"></span>
+<span class="hidden-link" data-link="http://www.twitter.com/morsouk" target="_blank"><img src="../img/icon/twitter.png" alt="twitter"></span>
+<span class="hidden-link" data-link="https://www.youtube.com/channel/UCV0KmQmmLlzfR0vBIhxdKrQ" target="_blank"><img src="../img/icon/youtube.png" alt="youtube"></span>
 					</div>
 
 				</div>
@@ -327,4 +326,3 @@
 </svg>
 </body>
 </html>
-
