--- a/app/goods.html
+++ b/app/goods.html
@@ -97,32 +97,32 @@
 						<img src="img/products/prodact/0.jpg" class="goods_img" id="GoodsImg" alt="Товар">
 					</a>
 				</div>
-			
+
 				<div class="goods_img-prew-wrap">
 					<a href="img/products/prodact/0.jpg" class="goods_img-link">
 						<div class="goods_img-item">
 							<span style="background-image: url('../img/products/prodact/0.jpg')"></span>
-						</div>								
+						</div>
 					</a>
 					<a href="img/products/prodact/1.jpg" class="goods_img-link">
 						<div class="goods_img-item">
-						 <span style="background-image: url('../img/products/prodact/1.jpg')"></span>	
-						</div>				
+						 <span style="background-image: url('../img/products/prodact/1.jpg')"></span>
+						</div>
 					</a>
 					<a href="img/products/prodact/2.jpg" class="goods_img-link">
 						<div class="goods_img-item">
 							<span style="background-image: url('../img/products/prodact/2.jpg')"></span>
-						</div>						
+						</div>
 					</a>
 					<a href="img/products/prodact/3.jpg" class="goods_img-link">
 						<div class="goods_img-item">
 						 <span style="background-image: url('../img/products/prodact/3.jpg')"></span>
-					 </div>					
+					 </div>
 					</a>
 					<a href="img/products/prodact/4.jpg"  class="goods_img-link">
 						<div class="goods_img-item">
 						 <span style="background-image: url('../img/products/prodact/4.jpg')"></span>
-						</div>											
+						</div>
 					</a>
 				</div>
 
@@ -141,10 +141,10 @@
 							<li class="goods_params-item"><span class="goods_params-name">Длина (мм)</span><span class="goods_params-value">718</span></li>
 							<li class="goods_params-item"><span class="goods_params-name">Диаметр дымохода</span><span class="goods_params-value">Ø 120</span></li>
 							<li class="goods_params-item"><span class="goods_params-name">Вес (кг)</span><span class="goods_params-value">125</span></li>
-							<li class="goods_params-item"><span class="goods_params-name">Длина топки (см)</span><span class="goods_params-value">45</span></li>	
+							<li class="goods_params-item"><span class="goods_params-name">Длина топки (см)</span><span class="goods_params-value">45</span></li>
 					</ul>
 			</div>
-			
+
 			<div class="goods_discrip-call">
 
 					<div class="goods_info-item">
@@ -174,10 +174,10 @@
 			</div>
 
 			<div class="goods_desc">
-				<p>Эта чрезвычайно популярная чугунная дровяная печь может с длинной топкой вмещать бревен длиной до 45 см. 
+				<p>Эта чрезвычайно популярная чугунная дровяная печь может с длинной топкой вмещать бревен длиной до 45 см.
 						Это лучистая печь и оборудована ребристой решеткой, пепельницей и пепельницей. 2B classic можно обжигать с помощью дерева.</p>
-				<p>Как и большинство других плиток Morsø, 2B Classic отвечает самым строгим экологическим требованиям в мире.</p>				
-				<p>Характерной особенностью 2B Classic от Morsø с сияющим теплом остается очень популярная серия. Длинная топка достаточно большая, 
+				<p>Как и большинство других плиток Morsø, 2B Classic отвечает самым строгим экологическим требованиям в мире.</p>
+				<p>Характерной особенностью 2B Classic от Morsø с сияющим теплом остается очень популярная серия. Длинная топка достаточно большая,
 					чтобы брать бревен длиной 45 см. Он может нагреваться до 150 кв.</p>
 				<h3>Технические особенности</h3>
 				<ul>
@@ -187,6 +187,27 @@
 					<li>Третичный воздух</li>
 					<li>Решетчатая колосниковая система</li>
 				</ul>
+					<h3>Розжиг печи Morso Forno</h3>
+				<div class="youtube">
+					<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ekcprQ3wOOY" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<h3>Копчение в печи Morso Forno</h3>
+				<div class="youtube">
+					<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5qfKlN8u3dg" allowfullscreen></iframe>
+					</div>
+				</div>
+
+
+
+
+
+
+
+
 			</div>
 
 			<h2  class="goods_doc-title">Техническая документрация</h2>
@@ -214,6 +235,14 @@
 				</div>
 
 			</div>
+
+
+
+
+
+
+
+
 	</section>
 </div>
 
@@ -223,7 +252,7 @@
 				<path fill="#55A462" d="M0 10L10 0h39.3v20H9.9L0 10z"></path>
 				<path fill="#FFF" d="M40.9 7.9V6.3h-1.6v-.7h1.6V3.9h.8v1.6h1.6v.7h-1.6v1.6h-.8zM34.7 3.6l4.7 12.2h-2.3L36 12.6h-4.8L30 15.8h-2.2l4.7-12.2h2.2zm.7 7.4l-1.8-5.1-1.9 5.1h3.7z"></path>
 		</symbol>
-		<symbol viewBox="0 0 49.3 20" id="energo-a">  
+		<symbol viewBox="0 0 49.3 20" id="energo-a">
 				<path fill="#B1CE55" d="M0.1,10.1l10-10h39.3v20l-39.4,0L0.1,10.1z"/>
 				<path fill="#FFFFFF" d="M34.7,3.6l4.7,12.2h-2.3L36,12.6h-4.8L30,15.8h-2.2l4.7-12.2H34.7z M35.4,11l-1.8-5.1L31.7,11H35.4z"/>
 		</symbol>
@@ -233,7 +262,7 @@
 					c0.3-0.7,0.8-1.2,1.5-1.6s1.4-0.6,2.3-0.6c0.7,0,1.4,0.2,2,0.5c0.6,0.3,1.1,0.8,1.5,1.3c0.4,0.6,0.7,1.3,0.8,2.1h-2.1
 					c-0.1-0.4-0.3-0.7-0.5-1c-0.2-0.3-0.5-0.5-0.8-0.7c-0.3-0.2-0.6-0.2-1-0.2c-0.5,0-0.9,0.1-1.2,0.3c-0.3,0.2-0.6,0.5-0.8,0.9
 					c-0.2,0.4-0.3,0.8-0.3,1.4v3.3c0,0.5,0.1,1,0.3,1.4s0.4,0.7,0.8,0.9c0.3,0.2,0.7,0.3,1.2,0.3c0.4,0,0.7-0.1,1-0.2s0.6-0.4,0.8-0.7
-					c0.2-0.3,0.4-0.6,0.5-1h2.1c-0.1,0.8-0.4,1.5-0.8,2.1s-0.9,1-1.5,1.3c-0.6,0.3-1.3,0.5-2,0.5C32.5,15.9,32.1,15.9,32.1,15.9z"/>	
+					c0.2-0.3,0.4-0.6,0.5-1h2.1c-0.1,0.8-0.4,1.5-0.8,2.1s-0.9,1-1.5,1.3c-0.6,0.3-1.3,0.5-2,0.5C32.5,15.9,32.1,15.9,32.1,15.9z"/>
 		</symbol>
 	</svg>
 
