Посадка, Поиск по сайту

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -11,13 +11,13 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
-	
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
@@ -385,31 +385,25 @@
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/indoor_1.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Дровяные печи</a></h3>	
-					</div>
-					<div class="catalog-item-wrap">
-							<a href="#" class="catalog-item-img">
-								<img src="img/products/catalog/indoor_2.jpg" alt="Товары">
-							</a>
-							<h3 class="catalog-item-title"><a href="#">Топки</a></h3>	
+						<h3 class="catalog-item-title"><a href="#">Дровяные печи</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/indoor_3.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Мультитупливные печи</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Мультитупливные печи</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/indoor_4.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Аксессуары</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Аксессуары</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/indoor_5.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Дрова</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Оборудование для подключения</a></h3>
 					</div>
 				</div>
 			</div>
@@ -427,14 +421,14 @@
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/outdoor_1.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Наружные камины</a></h3>	
+						<h3 class="catalog-item-title"><a href="#">Наружные камины</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/outdoor_2.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Аксессуары</a></h3>	
-					</div>					
+							<h3 class="catalog-item-title"><a href="#">Аксессуары</a></h3>
+					</div>
 				</div>
 			</div>
 			<!-- END  -->
@@ -450,31 +444,31 @@
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/kitchen_1.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Кастрюли и сковородки</a></h3>	
+						<h3 class="catalog-item-title"><a href="#">Кастрюли и сковородки</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/kitchen_2.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Кувшины и графины</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Кувшины и графины</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/kitchen_3.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Ножи и доски</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Ножи и доски</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/kitchen_4.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Кухонные пренадлежности</a></h3>	
+						<h3 class="catalog-item-title"><a href="#">Кухонные пренадлежности</a></h3>
 				</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/kitchen_5.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Предметы обслуживания</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Предметы обслуживания</a></h3>
 					</div>
 				</div>
 			</div>
@@ -492,20 +486,20 @@
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/living_1.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Подсвечники</a></h3>	
+						<h3 class="catalog-item-title"><a href="#">Подсвечники</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 							<a href="#" class="catalog-item-img">
 								<img src="img/products/catalog/living_2.jpg" alt="Товары">
 							</a>
-							<h3 class="catalog-item-title"><a href="#">Подносы и посуда</a></h3>	
+							<h3 class="catalog-item-title"><a href="#">Подносы и посуда</a></h3>
 					</div>
 					<div class="catalog-item-wrap">
 						<a href="#" class="catalog-item-img">
 							<img src="img/products/catalog/living_3.jpg" alt="Товары">
 						</a>
-						<h3 class="catalog-item-title"><a href="#">Вазоны</a></h3>	
-				</div>					
+						<h3 class="catalog-item-title"><a href="#">Вазоны</a></h3>
+				</div>
 				</div>
 			</div>
 			<!-- END  -->
@@ -517,7 +511,7 @@
 			<svg><use  xlink:href="#expert"></use></svg>
 		</div>
 		<h3>Спросить специалиста</h3>
-		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso. 
+		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso.
 		Поэтому мы предлагаем задать интересующие Вас вопросы специалисту - бесплатно и без обязательств.</p>
 		<a href="#" class="maininfo-btn">Задать вопрос</a>
 	</div>
@@ -530,7 +524,7 @@
 			<p>Вы решили купить печь Morsø, нажмите ниже, чтобы найти ближайшего дилера, который поможет Вам сделать покупку.</p>
 			<a href="#" class="maininfo-btn">Найти дилера</a>
 	</div>
-	
+
 	<div class="maininfo-item">
 			<div class="maininfo-img">
 				<svg><use  xlink:href="#briefcase"></use></svg>
